# rsi_bot

./: .gitignore  Dockerfile  README.md  bybit.http  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: main.yml
backend/: Dockerfile  bot.py  bybit.py  jobs.py  main.py  settings.py  ta.py
gateway/: nginx.conf
rsi_bot/: __init__.py  bot.py  bybit.py  exceptions.py  jobs.py  main.py  settings.py
